force-app/main/default/objects/Membership_Type__c/Membership_Type__c.object-meta.xml
<CustomObject>
    <label>Membership Type</label>
    <nameField>
        <label>Membership Level</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>