force-app/main/default/objects/Membership_Type__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <description>Detailed information or description of the benefit</description>
    <label>Benefits</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>