force-app/main/default/objects/Membership_Type__c/fields/Intended_Audience__c.field-meta.xml
<CustomField>
    <fullName>Intended_Audience__c</fullName>
    <label>Intended Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State Partners</fullName>
            </value>
            <value>
                <fullName>Local Programs</fullName>
            </value>
            <value>
                <fullName>Businesses</fullName>
            </value>
            <value>
                <fullName>Supporters</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
            <value>
                <fullName>MSA Board Members</fullName>
            </value>
            <value>
                <fullName>MSA Staff Members</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>