force-app/main/default/objects/Membership_Type__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field denotes the particular type whether it is active or not</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>