force-app/main/default/objects/Membership_Type__c/fields/Max_Sub_Members__c.field-meta.xml
<CustomField>
    <fullName>Max_Sub_Members__c</fullName>
    <label>Max Sub Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>