force-app/main/default/objects/Membership_Type__c/listViews/All_Types.listView-meta.xml
<ListView>
    <fullName>All_Types</fullName>
    <columns>NAME</columns>
    <columns>Max_Sub_Members__c</columns>
    <columns>IsActive__c</columns>
    <columns>Type__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Types</label>
</ListView>